--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,15 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "ruff>=0.11.7",
+]
+
+
+[tool.ruff.lint]
+preview = true
+extend-select = [
+    "E",
+    "F",
+    "I",
+]
