ruff: add some rules
Add ARG, Q, RUF, W.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,11 @@ dependencies = [
 [tool.ruff.lint]
 preview = true
 extend-select = [
+    "ARG",
     "E",
     "F",
     "I",
+    "Q",
+    "RUF",
+    "W",
 ]
