--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,15 @@ dependencies = [
     "tqdm>=4.67.1",
 ]
 
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/emails"]
+
+[project.scripts]
+main = "emails.main:main"
 
 [tool.ruff.lint]
 preview = true
