--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "mypy>=1.15.0",
     "ruff>=0.11.7",
     "tqdm>=4.67.1",
+    "types-tqdm>=4.67.0.20250417",
 ]
 
 [build-system]
@@ -30,3 +32,6 @@ extend-select = [
     "RUF",
     "W",
 ]
+
+[tool.mypy]
+files = ["src/"]
